--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -6,8 +6,9 @@
   <p *ngIf="product.description">
     {{product.description}}
   </p>
-
   <button (click)="share()">Share</button>
+  <app-product-alerts [product]="product">
+  </app-product-alerts>
 </div>
 
 
