--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -6,8 +6,10 @@
   <p *ngIf="product.description">
     {{product.description}}
   </p>
-  <button (click)="share()">Share</button>
-  <app-product-alerts [product]="product">
+  <button (click)="share()">
+  Share
+</button>
+  <app-product-alerts [product]="product" (notify)="onNotify()">
   </app-product-alerts>
 </div>
 
