--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,5 @@
 <h3>Cart</h3>
-
+<!-- <p [routerLink]="/shipping">Shipping Prices</p> -->
 <div class="cart-item" *ngFor="let item of items">
   <span>{{ item.name }}</span>
   <span>{{ item.price | currency }}</span>
